--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,28 @@
 
-language: bash
+#Use the new container-based infrastructure
+sudo: false
 
+#Install some apt packages needed for spcomp
+addons:
+    apt_packages:
+        - lib32stdc++6
+
+#Set the build environment
 env:
-    - SMVERSION=1.7
+    #- SMVERSION=1.7
+    - SMVERSION=1.8
 
-matrix:
-    fast_finish: true
-    
-before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -y gcc-multilib lynx git lib32stdc++6
-
+#And compile!
+install:
+    - wget --input-file=http://sourcemod.net/smdrop/$SMVERSION/sourcemod-latest-linux
+    - tar -xzf $(cat sourcemod-latest-linux)
 before_script:
-    - SMPATTERN="http:.*sourcemod-.*-linux.*"
-    - SMURL="http://www.sourcemod.net/smdrop/$SMVERSION/"
-    - SMPACKAGE=`lynx -dump "$SMURL" | egrep -o "$SMPATTERN" | tail -1`
-    - wget $SMPACKAGE
-    - tar -xzf $(basename "$SMPACKAGE")
-    - chmod +rx addons/sourcemod/scripting/spcomp
-    - chmod +rx addons/sourcemod/scripting/compile.sh
+# TODO Import other modules to compilation
     - cd addons/sourcemod/scripting/
+    - chmod +x spcomp
+    - mkdir compiled
+script: ./compile.sh noblood.sp
 
-script: 
-    - ./spcomp noblood.sp
 
 after_script:
     - ls ../plugin
